apps/home/ha/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
  annotations:
    link.argocd.argoproj.io/external-link: https://home.labs.andrewpjackson.com
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - env:
          - name: TZ
            value: America/Chicago
          - name: PYTHONWARNINGS
            value: ignore:Unverified HTTPS request
          image: homeassistant/home-assistant:2024.4
          imagePullPolicy: IfNotPresent
          name: home-assistant
          lifecycle:
            postStart:
              exec:
                command:
                  ['/bin/sh', '-c', 'cp -rf /src/homeassistant/* /config']
          ports:
            - containerPort: 8123
              name: api
              protocol: TCP
          resources:
            limits:
              cpu: 750m
              memory: 2Gi
            requests:
              cpu: 350m
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /
              port: api
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: api
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            timeoutSeconds: 2
          startupProbe:
            httpGet:
              path: /
              port: api
              scheme: HTTP
            initialDelaySeconds: 25
            failureThreshold: 5
            timeoutSeconds: 2
          securityContext:
            privileged: true
          volumeMounts:
            # - name: ha-secrets
            #   mountPath: /config/secrets.yaml
            #   subPath: secrets.yaml
            - name: config-volume
              mountPath: /config
            - name: temp-config
              mountPath: /src
            # - name: dev-usb-00
            #   mountPath: /dev/ttyUSB0
            # - name: dev-usb-01
            #   mountPath: /dev/ttyUSB1
            # - name: zigbee-00
            #   mountPath: /dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_C130205F-if00-port0
            # - name: zigbee-01
            #   mountPath: /dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_C130205F-if01-port0
            - name: dbus
              mountPath: /var/run/dbus
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      volumes:
        - name: ssh-key
          secret:
            secretName: ha-ssh-key-1password
            items:
            - key: private-key
              path: ssh
        # - name: ssh-key
        #   secret:
        #     secretName: ssh-key
        #     defaultMode: 256
        # - name: known-hosts
        #   secret:
        #     secretName: known-hosts
        #     defaultMode: 256
        # - name: ha-secrets
        #   secret:
        #     secretName: ha-secrets
        - name: config-volume
          persistentVolumeClaim:
            claimName: ha-storage
        # - name: zigbee-00
        #   hostPath:
        #     path: /dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_C130205F-if00-port0
        # - name: zigbee-01
        #   hostPath:
        #     path: /dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_C130205F-if01-port0
        - name: dbus
          hostPath:
            path: /var/run/dbus
        # - name: dev-usb-00
        #   hostPath:
        #     path: /dev/ttyUSB0
        # - name: dev-usb-01
        #   hostPath:
        #     path: /dev/ttyUSB1
        - name: temp-config
          emptyDir: {}
