apps/home/ha/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-assistant
  name: home-assistant
spec:
  ports:
    - name: ha
      port: 8123
      protocol: TCP
      targetPort: 8123
  selector:
    app: home-assistant
  type: ClusterIP
