apps/home/ha/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: home.gruber.dev.br
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: home.gruber.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeassistant
            port:
              name: ha
  tls:
  - hosts:
    - home.gruber.dev.br
    secretName: ha-tls
